@@ -57,7 +57,7 @@ class CheckStyle(AbstractStep):
 
         if self._options.check_style_filter:
             args.append("--filter")
-            args.extend(self._options.check_style_filter)
+            args.append(self._options.check_style_filter)
 
         try:
             self._tool.executive.run_and_throw_if_fail(self._tool.port().check_webkit_style_command() + args, cwd=self._tool.scm().checkout_root)
